Fix dark mode font color in thread quotes

--- a/freesound/static/bw-frontend/styles/atoms/threads.scss
+++ b/freesound/static/bw-frontend/styles/atoms/threads.scss
@@ -125,7 +125,7 @@
     p {
       font-size: 15px;
       line-height: 20px;
-      color: #333;
+      color: $black;
     }
   }
 }
